--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://hardcore-torvalds-9ff568.netlify.app/"
 languageCode = "en-us"
 title = "Komunitas Pecinta Musik Religi Semarang"
 theme = "nasyidsemarang"
